<resources>
    <string name="app_name">Calculator</string>
    <string name="_15_75">15+75</string>
    <string name="_0">0</string>
    <string name="_90">90</string>
    <string name="u00f7">÷</string>
    <string name="_5">5</string>
    <string name="mr">MR</string>
    <string name="_7">7</string>
    <string name="_dot">.</string>
    <string name="_1">1</string>
    <string name="_4">4</string>
    <string name="u03c0">π</string>
    <string name="_8">8</string>
    <string name="_2">2</string>
    <string name="m">M+</string>
    <string name="_percent">%</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_equals">=</string>
    <string name="_mminus">M-</string>
    <string name="_multiply">x</string>
    <string name="_subtract">-</string>
    <string name="exp">e<sup>x</sup></string>
    <string name="_add">\n+\n</string>
    <string name="_mc">MC</string>
</resources>